--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,18 @@
+/*------------------------------------------------------------------------------------------------------------------*/
+/*written by Spark*/
+/*------------------------------------------------------------------------------------------------------------------*/
+.flip-image{ 
+    width:300px;
+    height:300px;
+    object-fit: cover
+}
 
+
+
+
+/*------------------------------------------------------------------------------------------------------------------*/
+/*Parallax from https://keithclark.co.uk/articles/pure-css-parallax-websites/demo2/*/
+/*------------------------------------------------------------------------------------------------------------------*/
   .parallax {
     height: 100vh;
     overflow-x: hidden;
