--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,13 +12,13 @@
 /*------------------------------------------------------------------------------------------------------------------*/
   .parallax__group {
     position: relative;
-    height: 500px; /* fallback for older browsers */
+    height: 300px; /* fallback for older browsers */
     height: 100vh;
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
   } 
 
-.parallax {
+.parallax_container {
     height: 100vh;
     overflow-x: hidden;
     overflow-y: auto;
@@ -41,7 +41,7 @@
 
   .parallax__layer--back {
     -webkit-transform: translateZ(-1px) scale(2);
-    transform: translateZ(-1px) scale(2);
+    transform: translateZ(-1px) scale(2.05);
   }
 
 
