--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,13 @@
     object-fit: cover
 }
 
+/* bc of navbar fixed-top */
+body::before {
+  display: block;
+  content: '';
+  height: 56px;
+}
+
 /*------------------------------------------------------------------------------------------------------------------*/
 /* Parallax from https://keithclark.co.uk/articles/pure-css-parallax-websites/demo2/   */
 /*------------------------------------------------------------------------------------------------------------------*/
