fixed a bunch of things, and added some content

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,29 +1,52 @@
 /*------------------------------------------------------------------------------------------------------------------*/
 /*by Spark*/
 /*------------------------------------------------------------------------------------------------------------------*/
-.flip-image{ 
-  width:300px;
-  height:300px;
-  object-fit: cover
+:root {
+  --card_width: 300px;
+  --card_height: 300px;
+  /* makes my eye hurt, pls recommend a better solution */
+  --bg_offset: 286px;
+  --navbar_offset:56px;
 }
 
-/* bc of navbar fixed-top */
-body::before {
+.flip-image{ 
+  width:var(--card_width);
+  height:var(--card_height);
+  /* object-fit: cover; */
+  object-fit: contain;
+}
+
+/* body::before {
+  bc of navbar fixed-top
   display: block;
   content: '';
   height: 56px;
+} */
+
+.bg-img{
+  position: absolute;
+  opacity: 0.5;
+  width: 100vw;
+        /* clip bg image scrollbar */
+        overflow: hidden;
+}
+
+.landing::before{
+  /* bc of navbar fixed-top */
+  display: block;
+  content: '';
+  height: var(--navbar_offset);
 }
 
 /*------------------------------------------------------------------------------------------------------------------*/
 /* Parallax from https://keithclark.co.uk/articles/pure-css-parallax-websites/demo2/   */
 /*------------------------------------------------------------------------------------------------------------------*/
-  .parallax__group {
+  /* .parallax__group {
     position: relative;
-    height: 300px; /* fallback for older browsers */
     height: 100vh;
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
-  } 
+  }  */
 
 .parallax_container {
     height: 100vh;
@@ -49,6 +72,7 @@ body::before {
   .parallax__layer--back {
     -webkit-transform: translateZ(-1px) scale(2);
     transform: translateZ(-1px) scale(2.05);
+    
   }
 
 
@@ -59,8 +83,8 @@ body::before {
 /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 .flip-card {
   background-color: transparent;
-  width: 300px;
-  height: 300px;
+  width: var(--card_width);
+  height: var(--card_height);
   border: 0px solid #f1f1f1;
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
 }
@@ -91,8 +115,8 @@ body::before {
 
 /* Style the front side (fallback if image is missing) */
 .flip-card-front {
-  background-color: #bbb;
-  color: black;
+  background-color: white;
+  color: white;
 }
 
 /* Style the back side */
@@ -109,10 +133,8 @@ body::before {
 .hero-particles-container{
   position: absolute;
   width: 100%;
-  /* makes my eye hurt, pls recommend a better solution */
-  height: 230px;
+  height: var(--bg_offset);
 }
-
 
 .hero-particles-container,
 .lead-text{
