--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,34 +9,33 @@
   --navbar_offset:56px;
 }
 
+.flip-title{
+  position: absolute;
+  top: 250px;
+  left: 0px;
+  padding: 5%;
+}
+
 .flip-image{ 
   width:calc(var(--card_width) * 1);
   height:calc(var(--card_height) *1);
   /* object-fit: cover; */
   object-fit: contain;
+  position: relative;
 }
-.flip-bg-image{
+
+/* .flip-bg-image{
   width:calc(var(--card_width) * 1);
   height:calc(var(--card_height) *1);
   opacity: 0.3;
   position: absolute;
-  /* object-fit: cover; */
+  // object-fit: cover;
   object-fit: contain;
-}
+} */
 
-.text-stroke{
+/* .text-stroke{
   -webkit-text-stroke: 0.2px #F69200;
-}
-
-/* body{
-  background-color: black;
-} */
-/* body::before {
-  bc of navbar fixed-top
-  display: block;
-  content: '';
-  height: 56px;
-} */
+} */  
 
 .bg-img{
   position: absolute;
@@ -51,6 +50,11 @@
   display: block;
   content: '';
   height: var(--navbar_offset);
+}
+
+.footer-absolute-container{
+  position: absolute;
+  width: 100%;
 }
 
 /*------------------------------------------------------------------------------------------------------------------*/
@@ -116,6 +120,8 @@
 /* Position the front and back side */
 .flip-card-front, .flip-card-back {
   position: absolute;
+  top: 0px;
+  left: 0px;
   width: 100%;
   height: 100%;
   -webkit-backface-visibility: hidden; /* Safari */
@@ -153,6 +159,10 @@
   position: absolute;
   width: 100%;
   height: var(--bg_offset);
+}
+
+.landing-title {
+  font-family: Oxygen
 }
 
 #hero-particles{
