--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,5 +5,8 @@ $secondary: #212529;
 
 $dark: #0B0D19; 
 
+//configurations
+$enable-smooth-scroll: True;
+
 //adding bootstrap
 @import '../node_modules/bootstrap/scss/bootstrap';
