--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,26 +9,40 @@
   --navbar_offset:56px;
 }
 
-.flip-image{ 
-  width:var(--card_width);
-  height:var(--card_height);
-  /* object-fit: cover; */
-  object-fit: contain;
+.flip-title{
+  position: absolute;
+  top: 250px;
+  left: 0px;
+  padding: 5%;
 }
 
-/* body::before {
-  bc of navbar fixed-top
-  display: block;
-  content: '';
-  height: 56px;
+.flip-image{ 
+  width:calc(var(--card_width) * 1);
+  height:calc(var(--card_height) *1);
+  /* object-fit: cover; */
+  object-fit: contain;
+  position: relative;
+}
+
+/* .flip-bg-image{
+  width:calc(var(--card_width) * 1);
+  height:calc(var(--card_height) *1);
+  opacity: 0.3;
+  position: absolute;
+  // object-fit: cover;
+  object-fit: contain;
 } */
+
+/* .text-stroke{
+  -webkit-text-stroke: 0.2px #F69200;
+} */  
 
 .bg-img{
   position: absolute;
   opacity: 0.5;
   width: 100vw;
-        /* clip bg image scrollbar */
-        overflow: hidden;
+  /* clip bg image scrollbar */
+  overflow: hidden;
 }
 
 .landing::before{
@@ -38,15 +52,14 @@
   height: var(--navbar_offset);
 }
 
+.footer-absolute-container{
+  position: absolute;
+  width: 100%;
+}
+
 /*------------------------------------------------------------------------------------------------------------------*/
 /* Parallax from https://keithclark.co.uk/articles/pure-css-parallax-websites/demo2/   */
 /*------------------------------------------------------------------------------------------------------------------*/
-  /* .parallax__group {
-    position: relative;
-    height: 100vh;
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-  }  */
 
 .parallax_container {
     height: 100vh;
@@ -107,6 +120,8 @@
 /* Position the front and back side */
 .flip-card-front, .flip-card-back {
   position: absolute;
+  top: 0px;
+  left: 0px;
   width: 100%;
   height: 100%;
   -webkit-backface-visibility: hidden; /* Safari */
@@ -122,7 +137,11 @@
 /* Style the back side */
 .flip-card-back {
   background-color: #0B0D19;
-  color: white;
+  /* border-style: solid;
+  border-color: #F69200;
+  border-width: 1px; */
+  padding: 10%;
+  /* color: white; */
   transform: rotateY(180deg);
 }
 
@@ -140,6 +159,10 @@
   position: absolute;
   width: 100%;
   height: var(--bg_offset);
+}
+
+.landing-title {
+  font-family: Oxygen
 }
 
 #hero-particles{
